# compuse

./: .gitignore  classes.csv  classes1.csv  dependencies.csv  dependencies1.csv  files1.csv  functions1.csv  hello.py  icecream_output.txt  justfornow.json  loop_webview.py  pg_model_20241104_124845.pt  pyproject.toml  test_basic_webview.py
computer_use_demo/: .gitignore  README_code_context_manager.md  Untitled-1.js  Untitled-3.txt  aclinks.csv  auto.json  cal.py  code_context_manager.py  computer.py  cputest.py  edit_tool.py  extracted_links.csv  filtered_links.csv  hello.py  icecream_output.txt  import asyncio.py  justfornow.json  load_constants.py  loop.py  loop_gui.py  loop_webview.py  messages.json  paste.txt  playtest.py  prompt.md  pyproject.toml  requirements.txt  search_results.csv  sim.py  simple.py  state.json  system_prompt.md  test.py  test_webview.py  token.json  view.md
computer_use_demo/journal/: journal.log.archive  journal_system_prompt.md
computer_use_demo/prompts/: bashtoshell.md  compuse_web.md  prompt copy.md  prompt.md  promptcodemanip.md  promptwebview.md  setup.md
computer_use_demo/summaries/: summary.md  summary_prompt_text.md
computer_use_demo/tools/: __init__.py  base.py  bash.py  classes1.csv  code_context.json  code_context_manager.py  code_tools.py  collection.py  computer.py  dependencies1.csv  edit.py  example_tool.py  expert.py  function_schema.py  functions1.csv  gotourl_reports.py  main.py  playwright.py  run.py  test.py  test_navigation_tool.py  tsest.py  windows_navigation.py  windows_shortcuts.json
image/: atest.py
(+1 files in other folders)
